# orders_grpc

proto/: order.proto
python/: order_client.py  order_pb2.py  order_pb2_grpc.py  order_server.py
rust/order/: Cargo.toml  build.rs
rust/order/src/: order_repository.rs  server.rs
